package design.strategy;

/**
 * 策略角色和方法.
 */
public interface Strategy {

    void algorithmLogic();

}
